ecmascript/parser/tests/typescript-errors/tsc/es6/templates/templateStringInPropertyNameES6_2/input.ts.stderr
error: Unexpected token ```. Expected identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/typescript-errors/tsc/es6/templates/templateStringInPropertyNameES6_2/input.ts:3:5
  |
3 |     `abc${ 123 }def${ 456 }ghi`: 321
  |     ^

